# dif-pressure-meter

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  dif-pressure-meter.yaml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yaml
components/flow_meter/: __init__.py  flow_meter.cpp  flow_meter.h  sensor.py
electrical/: bom.xlsx  dif-pressure-meter.kicad_pcb  dif-pressure-meter.kicad_prl  dif-pressure-meter.kicad_pro  dif-pressure-meter.kicad_sch  fp-info-cache  sym-lib-table
electrical/3dmodels/: 1.8_lcd.step  5way-switch.step  PKLCS1212E40A1-R1.step
electrical/footprints/: DIO_BZT52C6V2_RHG.kicad_mod  LCD_ST7735S_1.8.kicad_mod  SDP810.kicad_mod  SOD3715X135N.kicad_mod  SOD3715X145N.kicad_mod  SOP127P600X175-9N.kicad_mod  SPKR_PKLCS1212E40A1-R1.kicad_mod  SWITCH_5WAY_8x8.kicad_mod  XDCR_PS1240P02BT.kicad_mod
electrical/gerbers/: dif-pressure-meter-B_Cu.gbl  dif-pressure-meter-B_Mask.gbs  dif-pressure-meter-B_Paste.gbp  dif-pressure-meter-B_Silkscreen.gbo  dif-pressure-meter-Edge_Cuts.gm1  dif-pressure-meter-F_Cu.gtl  dif-pressure-meter-F_Mask.gts  dif-pressure-meter-F_Paste.gtp  dif-pressure-meter-F_Silkscreen.gto  dif-pressure-meter-NPTH-drl_map.gbr  dif-pressure-meter-NPTH.drl  dif-pressure-meter-PTH-drl_map.gbr  dif-pressure-meter-PTH.drl
electrical/symbols/: 1N5819HW-7-F.kicad_sym  BZT52C3V3-7-F.kicad_sym  BZT52C6V2_RHG.kicad_sym  LCD_ST7735S_1.8.kicad_sym  PKLCS1212E40A1-R1.kicad_sym  PS1240P02BT.kicad_sym  RT9080-33GJ5.kicad_sym  SDP810.kicad_sym  (+3 more)
imgs/: dpm-usage.drawio
mech/: back.stl  front.stl  spacer.stl
