[project]
name = "dif-pressure-meter"
dynamic = ["version"]
description = "DIY handheld battery-powered differential pressure and air flow meter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Ardi Loot" },
]
dependencies = [
    "esphome",
    "pre-commit",
    "pre-commit-uv",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools_scm]
